src/objects/Contractor_Request__c.object
<CustomObject>
    <description>fill out this form to begin the process of requesting external resources</description>
    <fields>
        <fullName>Anticipated_End__c</fullName>
        <inlineHelpText>When do you expect this work to end?</inlineHelpText>
        <label>Anticipated End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Start__c</fullName>
        <inlineHelpText>when do you need this person to start?</inlineHelpText>
        <label>Desired Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FTE__c</fullName>
        <inlineHelpText>How many people?  Can be fractional for 1/2 or quarter-time.</inlineHelpText>
        <label>FTE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Config</fullName>
                </value>
                <value>
                    <fullName>Salesforce Code (Apex/VF/Lightning)</fullName>
                </value>
                <value>
                    <fullName>Microsoft stack (.net/C#/F#/UWP)</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Front-End (html, js, css)</fullName>
                </value>
                <value>
                    <fullName>Angular</fullName>
                </value>
                <value>
                    <fullName>React</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Accepting Resumes</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Description__c</fullName>
        <inlineHelpText>What do you need done?  Attach documents, etc.</inlineHelpText>
        <label>Work Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Indianapolis</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
                <value>
                    <fullName>Remote (US)</fullName>
                </value>
                <value>
                    <fullName>Remote (EMEA)</fullName>
                </value>
                <value>
                    <fullName>Remote (APAC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>3-4</fullName>
                </value>
                <value>
                    <fullName>5-6</fullName>
                </value>
                <value>
                    <fullName>7+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contractor Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Skills__c</columns>
        <columns>Anticipated_End__c</columns>
        <columns>FTE__c</columns>
        <columns>Desired_Start__c</columns>
        <columns>Status__c</columns>
        <columns>Years_of_Experience__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Desired_Start__c</columns>
        <columns>Anticipated_End__c</columns>
        <columns>Skills__c</columns>
        <columns>Years_of_Experience__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Work_Description__c</columns>
        <columns>FTE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepting Resumes</value>
        </filters>
        <label>Open Requests</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0}</displayFormat>
        <label>Contractor Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>